need cart design

--- a/src/less/app.less
+++ b/src/less/app.less
@@ -98,12 +98,16 @@ body {
 }
 .attraction-panel {
   color: white;
-  font-size: 20pt;
+  font-size: 18pt;
   font-family: 'Helvetica', 'Arial', sans-serif;
   -webkit-text-stroke: 1px black;
   font-weight: 600;
   background-color: rgba(50, 41, 41, 0.7);
   border-radius: 30px solid rgb(0, 0, 0);
+}
+.attraction-panel.tag {
+  color: rgb(82, 142, 238);
+  background-color: rgba(0, 0, 0, 0);
 }
 .logo {
   height: 150px;
@@ -140,6 +144,10 @@ background-size: cover;
 
 .carousel .active {
 opacity: 1 !important;
+}
+
+.attraction-slideshow {
+  width: 400px;
 }
 
 .carousel .left {
