--- a/src/less/app.less
+++ b/src/less/app.less
@@ -32,6 +32,9 @@ body {
   //height: 100px;
   border: none;
 }
+.body-spacing {
+  margin-top: 150px;
+}
 @media (max-width: 775px) {
 .navbar {
     background-color: rgb(28, 27, 27);
@@ -39,7 +42,11 @@ body {
     //height: 100px;
     border: none;
   }
+  .body-spacing {
+    margin-top: 300px;
+  }
 }
+
 
 .navbar-item {
   color: white;
@@ -59,28 +66,29 @@ body {
 
 .weather-panel {
   color: white;
-  font-size: 20pt;
+  font-size: 13pt;
   font-family: 'Helvetica', 'Arial', sans-serif;
   -webkit-text-stroke: 1px black;
   font-weight: 600;
-  background-color: rgba(50, 41, 41, 0.7);
+  //background-color: rgba(50, 41, 41, 0.7);
   border-radius: 30px solid rgb(0, 0, 0);
 }
 .ticket-panel{
   color: white;
-  font-size: 20pt;
+  font-size: 25pt;
   font-family: 'Helvetica', 'Arial', sans-serif;
   -webkit-text-stroke: 1px black;
   font-weight: 600;
   background-color: rgba(50, 41, 41, 0.7);
   border-radius: 30px solid rgb(0, 0, 0);
+  padding: 30px;
 }
 .purchase-button {
   font-size: 22pt;
   -webkit-text-stroke: 0px black;
 }
 .tweet-panel {
-  width: 250px;
+  width: 500px;
   border: 2px solid rgb(0, 0, 0);
   border-radius: 15px;
   background-color: rgb(0, 132, 255);
